Impact investing summit

--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
 				</summary>
 				Public Speaking:
 				<ul>
+					<li>Panelist on "The East Africa Renewable Energy Mix-Critical Approaches towards a Just Transition" at the Africa ESG & Impact Investing Summit (2023)</li>
 					<li>Panelist on "Solar and Green Energy as Ways of Harnessing Affordable Energy that is Environmentally Friendly" at the Intergovernmental Authority on Development's Kampala Declaration Forum (2022) </li>
 					<li>Session Expert on "How Mini-grids are Electrifying the Region" at Eastern Africa Solar Week Conference (2022)</li>
 					<li>Invited lecturer for the MIT Office of Engineering Outreach Programs' summer workshop, on "An Introduction to Machine Learning with PyTorch" (2021)</li>
