--- a/selected-work.html
+++ b/selected-work.html
@@ -40,6 +40,14 @@
 		<p class="centered"><i><span id="click-on">click on</span><span id="tap">tap</span> an image to read more about the project</i></p>
 
 		<div id="selected-work-container">
+			<a class="project" aria-label="Blockchain-Based Carbon Assets" href="rrecs.html">
+				<img src="selected-work/rrecs.jpg" alt="Environmentally sustainable cryptocurrency">
+				<div class="proj-overlay">
+					<div class="hashtags">#cryptocurrency #sustainability</div>
+					<h2>Blockchain-Based Carbon Assets</h2>
+				</div>
+			</a>
+			
 			<a class="project" aria-label="Autonomous Excavation" href="dfl.html">
 				<img src="selected-work/dfl.jpg" alt="Illustration of a machine learning algorithm for autonomous excavation">
 				<div class="proj-overlay">
