Descriptive titles for RFID work

--- a/rfly.html
+++ b/rfly.html
@@ -38,7 +38,7 @@
 	<main>
 		<div class="cover section">
 			<img src="project-pages/rfly-cover.jpg" alt="Drone with a mounted PCB">
-			<h1>RFly</h1>
+			<h1>Full-Duplex Wireless Relay</h1>
 		</div>
 
 		<section id="skills-demonstrated">
