--- a/selected-work.html
+++ b/selected-work.html
@@ -64,19 +64,19 @@
 				</div>
 			</a>
 			
-			<a class="project" aria-label="RFind" href="rfind.html">
+			<a class="project" aria-label="Wireless Sensing" href="rfind.html">
 				<img src="selected-work/rfind.jpg" alt="Smart phone displaying a schematic of a living room">
 				<div class="proj-overlay">
 					<div class="hashtags">#rfid #networking #artificial-intelligence</div>
-					<h2>RFind</h2>
+					<h2>Wireless Sensing</h2>
 				</div>
 			</a>
 			
-			<a class="project" aria-label="RFly" href="rfly.html">
+			<a class="project" aria-label="Full-Duplex Wireless Relay" href="rfly.html">
 				<img src="selected-work/rfly.jpg" alt="Drone outfitted with a PCB">
 				<div class="proj-overlay">
 					<div class="hashtags">#rfid #drones #networking</div>
-					<h2>RFly</h2>
+					<h2>Full-Duplex Wireless Relay</h2>
 				</div>
 			</a>
 			
