--- a/rfind.html
+++ b/rfind.html
@@ -38,7 +38,7 @@
 	<main>
 		<div class="cover section">
 			<img src="project-pages/rfind-cover.jpg" alt="Hand holding smartphone showing a schematic of a living room">
-			<h1>RFind</h1>
+			<h1>Wireless Sensing</h1>
 		</div>
 
 		<section id="skills-demonstrated">
