--- a/selected-work.html
+++ b/selected-work.html
@@ -40,6 +40,14 @@
 		<p class="centered"><i><span id="click-on">click on</span><span id="tap">tap</span> an image to read more about the project</i></p>
 
 		<div id="selected-work-container">
+			<a class="project" aria-label="Kenya's Largest Solar Mini-Grid" href="kalobeyei.html">
+				<img src="selected-work/kalobeyei.jpg" alt="Environmentally sustainable cryptocurrency">
+				<div class="proj-overlay">
+					<div class="hashtags">#solar #construction #project-management</div>
+					<h2>Kenya's Largest Solar Mini-Grid</h2>
+				</div>
+			</a>
+			
 			<a class="project" aria-label="Blockchain-Based Carbon Assets" href="rrecs.html">
 				<img src="selected-work/rrecs.jpg" alt="Environmentally sustainable cryptocurrency">
 				<div class="proj-overlay">
