Kalobeyei and RREC tweaks

--- a/rrecs.html
+++ b/rrecs.html
@@ -38,7 +38,7 @@
 	<main>
 		<div class="cover section">
 			<img src="project-pages/rrecs-cover.jpg" alt="An environmentally sustainable blockchain.">
-			<h1 style="color: black; -webkit-text-stroke: 1px white;">Blockchain-Based Carbon Assets</h1>
+			<h1>Blockchain-Based Carbon Assets</h1>
 		</div>
 
 		<section id="skills-demonstrated">
