--- a/kalobeyei.html
+++ b/kalobeyei.html
@@ -54,7 +54,7 @@
 
 		<div class="separator"></div>
 
-        <p>As the Director of Engineering for Renewvia Solar Africa, my leadership was integral to the success of Renewvia's expansion project in Kalobeyei Refugee Settlement. In 2022, we expanded the generation system to 541 kW with grant assistance from the Kakuma-Kalobeyei Challenge Fund and GIZ, and extended power lines throughout the villages, bringing electricity to over 2700 customers.</p>
+        <p>As the Director of Engineering for Renewvia Solar Africa, I worked with <a rel="external" target="_blank" href="https://www.linkedin.com/in/douglas-cox/">Douglas Cox</a> to lead the construction of Renewvia's expansion project in Kalobeyei Refugee Settlement. In 2022, we expanded the generation system to 541 kW with grant assistance from the Kakuma-Kalobeyei Challenge Fund and GIZ, and extended power lines throughout the villages, bringing electricity to over 2700 customers.</p>
 
         <div class="centered section">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/f5FuaYcldag" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
