Added vCard to business card

--- a/business-card.html
+++ b/business-card.html
@@ -51,6 +51,11 @@
 			<p>PO Box 14805, Nairobi, Kenya</p>
 		</a>
 
+		<a class="contact" href="business-card/vcard.vcf" target="_blank">
+			<img alt="vCard icon" src="business-card/icon-vcard.jpg">
+			<p>Add me to your contacts</p>
+		</a>
+
 		<a class="contact" href="business-card/qr.png" target="_blank">
 			<img alt="QR code icon" src="business-card/icon-qr.jpg">
 			<p>Get shareable QR code</p>
