line losses blog post

--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,20 @@
 	</header>
 
 	<main>
+		<a class="item" aria-label="I2R Losses in Single- and Three-Phase Distribution Networksy" href="line-losses.html">
+			<p class="date">March 4, 2023</p>
+			<div class="w-img">
+				<img src="blog/line-losses.jpg" alt="A power line pole">
+				<div>
+					<h2>I2R Losses in Single- and Three-Phase Distribution Networks</h2>
+					<p class="teaser">How unbalanced do loads on a three-phase distribution network have to be to warrant reconfiguring the network to be single-phase?</p>
+				</div>
+			</div>
+		</a>
+
+		<div class="separator"></div>
+
+		
 		<a class="item" aria-label="15 Steps to Donate a Kidney" href="kidney.html">
 			<p class="date">September 27, 2021</p>
 			<div class="w-img">
