--- a/line-losses.html
+++ b/line-losses.html
@@ -75,7 +75,7 @@
 		<section id="Three-Phase">
 			<h2>I2R Losses in a Three-Phase Distribution Network</h2>
 			<img class="img-center" style="width: 12cm;" src="blog-posts/losses-3p.jpg" alt="Diagram of a three-phase distribution network">
-			<p>Consider a three-phase AC distribution network in a wye configuration with four cables: Line 1, Line 2, Line 3, and Neutral. Assume each conductor has the same resistance, \(\mathrm{R} &gt; 0\), and each of the three lines, \(k\), is supplying a load with current \(i_k &gt; 0\). The current flowing back to the source along the neutral is:</p>
+			<p>Consider a three-phase AC distribution network in a wye configuration with four cables: Line 1, Line 2, Line 3, and Neutral. Assume each conductor has the same resistance, \(\mathrm{R} &gt; 0\), and each of the three lines, \(k\), is supplying a load with current \(i_k \geq 0\). The current flowing back to the source along the neutral is:</p>
 			<div class="equation">
 				\begin{equation}
 					i_{\mathrm{N},3\mathrm{p}}=\sqrt{i_1^2+i_2^2+i_3^2-i_1i_2-i_1i_3-i_2i_3}
