--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<main>
 		<div id="title-card" class="section">
-			<img id="headshot" src="homepage/headshot.jpeg" alt="My professional headshot">
+			<img id="headshot" src="homepage/headshot.jpg" alt="My professional headshot">
 			<div id="title-card-right">
 				<div>
 					<p>Director of Engineering at Renewvia</p>
@@ -253,6 +253,7 @@
 				</summary>
 				Public Speaking:
 				<ul>
+					<li>Invited lecturer for "Electric Vehicles and the Grid" course at the Georgia Institute of Technology (2023)</li>
 					<li>Panelist on "The East Africa Renewable Energy Mix: Critical Approaches towards a Just Transition" at the Africa ESG & Impact Investing Summit (2023)</li>
 					<li>Panelist on "Solar and Green Energy as Ways of Harnessing Affordable Energy that is Environmentally Friendly" at the Intergovernmental Authority on Development's Kampala Declaration Forum (2022) </li>
 					<li>Session Expert on "How Mini-grids are Electrifying the Region" at Eastern Africa Solar Week Conference (2022)</li>
