--- a/index.html
+++ b/index.html
@@ -253,10 +253,11 @@
 				</summary>
 				Public Speaking:
 				<ul>
+					<li>Keynote speaker for "Mechanical Engineering Shaping the World" event at the Georgia Institute of Technology (2023)</li>
 					<li>Invited lecturer for "Electric Vehicles and the Grid" course at the Georgia Institute of Technology (2023)</li>
 					<li>Panelist on "The East Africa Renewable Energy Mix: Critical Approaches towards a Just Transition" at the Africa ESG & Impact Investing Summit (2023)</li>
 					<li>Panelist on "Solar and Green Energy as Ways of Harnessing Affordable Energy that is Environmentally Friendly" at the Intergovernmental Authority on Development's Kampala Declaration Forum (2022) </li>
-					<li>Session Expert on "How Mini-grids are Electrifying the Region" at Eastern Africa Solar Week Conference (2022)</li>
+					<li>Panelist on "How Mini-grids are Electrifying the Region" at Eastern Africa Solar Week Conference (2022)</li>
 					<li>Invited lecturer for the MIT Office of Engineering Outreach Programs' summer workshop, on "An Introduction to Machine Learning with PyTorch" (2021)</li>
 					<li>Invited lecturer for "Summer Springboard," a high school summer program, on "Robotics 101" (2021)</li>
 					<li>Host of "Science Day" for 600+ low-income K-5th graders at Conley Hills Elementary School (2015)</li>
